# galerna

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
anterior/: _base_wrappers.py  swash_wrapper.py
examples/: custom_wrapper.py  example_holland.py  test_config.json  test_config.yaml
examples/commands/: dummy_script.py
examples/commands/empty_folder/: empty_folder.py
examples/commands/no_folder/: no_folder.py
examples/commands/script_inside/: script_inside.py
examples/commands/script_inside/templates/: dummy_script.py
examples/launchers/: slurm_xbeach.sh
examples/templates/xbeach_holland_default/: .config  params.txt
examples/trasgu/: custom_wrapper.py  test_config.yaml
examples/xbeach/: example_holland.py  xbeach_holland.yaml
examples/xbeach/aux/: slurm_xbeach.sh  xbeach_wrapper.py
galerna/: __init__.py  base.py  baseIA.py  bulk_array.py  cli.py  utils.py
model_wrappers/: __init__.py  base.py  cli.py  execution.py  utils.py
tests/: test_cli.py  test_context_and_build.py  test_logging.py  test_validation.py
