[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "model-wrappers"
version = "0.1.0"
description = "Minimal numerical model wrappers infrastructure."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires-python = ">=3.11"
dependencies = [
    "jinja2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["model_wrappers*"]

